--- a/scripts/G9Drivertest/testMethods.ipynb
+++ b/scripts/G9Drivertest/testMethods.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -90,21 +90,20 @@
     "\n",
     "    # helper function to convert bytes to bits for checking flags\n",
     "    # not currently being used but many be helpful in the future for getting errors\n",
-    "    def bytesToBinary(byte_string):\n",
+    "    def bytesToBinary(self, byte_string):\n",
     "        return ''.join(format(byte, '08b') for byte in byte_string)\n",
     "    \n",
     "    # this method is made to check the error flags, right not only checks the last 13 bits\n",
     "    # of a byte string\n",
-    "    def checkFlags13(self, byteString, inputs = 13, norm = 1):\n",
+    "    def checkFlags13(self, byteString, norm = 1):\n",
     "        assert isinstance(byteString, bytes)\n",
     "        # this is for if we only need the last 13 bits (more or less hardcoding this \n",
     "        # just including the rest if it might be helpful in the future\n",
-    "        if inputs == -1:\n",
-    "            if sum(byteString[-1] >= inputs):\n",
-    "                # all flags we care about are 1\n",
-    "                return True\n",
-    "            else:\n",
-    "                return False\n",
+    "        if int(self.bytesToBinary(byteString)[-13:], 2) >= (13 * norm):\n",
+    "            # all flags we care about are 1\n",
+    "            return True\n",
+    "        else:\n",
+    "            return False\n",
     "\n",
     "\n",
     "    #TODO: async function, waiting for responce from query\n",
@@ -121,7 +120,6 @@
     "            alwaysFooter = data[-2:]\n",
     "            print(alwaysFooter, alwaysHeader)\n",
     "            if alwaysHeader != b'\\x40\\x00\\x00' or alwaysFooter != b'\\x2A\\x0D':\n",
-    "                \n",
     "                raise ValueError(\"Always bits are incorrect\")\n",
     "            OCTD = data[7:11]\n",
     "            print(\"OCTD: \", OCTD)\n",
@@ -130,27 +128,29 @@
     "\n",
     "            # TODO: Need to add SITDF functionality\n",
     "            SITDF = data[11:17]\n",
-    "            print(\"SITDF: \", SITDF)\n",
+    "            if not self.checkFlags13(SITDF):\n",
+    "                #TODO: add a function to check which input\n",
+    "                # if self.safetyInTerminalError(data[11:17]):\n",
+    "                raise ValueError(\"An input is either off or throwing an error\")\n",
     "\n",
     "            # TODO: Need to add SOTDF functionality\n",
     "            SOTDF = data[17:21]\n",
-    "            print(\"SOTDF: \", SOTDF)\n",
+    "            if not self.checkFlags13(SOTDF):\n",
+    "                #TODO: add a function to check which output\n",
+    "                # if self.safetyInTerminalError(data[11:17]):\n",
+    "                raise ValueError(\"An output is either off or throwing an error\")\n",
+    "\n",
     "\n",
     "            SITSF = data[21:27]\n",
-    "            print(\"SITSF: \", SITSF)\n",
-    "\n",
     "            if not self.checkFlags13(SITSF):\n",
     "                if self.safetyInTerminalError(data[31:55]):\n",
     "                    raise ValueError(\"Error was detected but was not found\")\n",
     "                \n",
     "            SOTSF = data[27:31]\n",
-    "            print(\"SOTSF: \", SITSF)\n",
-    "\n",
     "            if not self.checkFlags13(SOTSF):\n",
     "                if self.safetyOutTerminalError(data[55:71]):\n",
     "                    raise ValueError(\"Error was detected but was not found\")\n",
     "                \n",
-    "            # TODO: Need to add error cause\n",
     "\n",
     "            # US - Unit Status\n",
     "            US = data[73:75]\n",
@@ -166,8 +166,6 @@
     "            # TODO: Need to add operation log\n",
     "            operationLog = data[148:199]\n",
     "                \n",
-    "\n",
-    "\n",
     "        else:\n",
     "            self.sendCommand()\n",
     "\n",
@@ -287,12 +285,13 @@
     "            return False\n",
     "        \n",
     "\n",
-    "    #TODO: Figure out how to handle all the errors (end task)\n"
+    "    #TODO: Figure out how to handle all the errors (end task)\n",
+    "    #TODO: add a function to keep track of the driver uptime\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -359,7 +358,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -379,7 +378,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [
     {
@@ -387,27 +386,25 @@
      "output_type": "stream",
      "text": [
       "b'*\\r' b'@\\x00\\x00'\n",
-      "OCTD:  b'\\x00\\x00\\x00\\x00'\n",
-      "SITDF:  b'\\xff\\x0f\\x00\\x00\\x00\\x00'\n",
-      "SOTDF:  b'$\\x00\\x00\\x00'\n",
-      "SITSF:  b'\\xff\\xff\\x0f\\x00\\x00\\x00'\n"
+      "OCTD:  b'\\x00\\x00\\x00\\x00'\n"
      ]
     },
     {
-     "ename": "ValueError",
-     "evalue": "Error was detected but was not found",
+     "ename": "TypeError",
+     "evalue": "G9Driver.bytesToBinary() takes 1 positional argument but 2 were given",
      "output_type": "error",
      "traceback": [
       "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mValueError\u001b[0m                                Traceback (most recent call last)",
-      "Cell \u001b[1;32mIn[28], line 2\u001b[0m\n\u001b[0;32m      1\u001b[0m res[\u001b[38;5;241m21\u001b[39m:\u001b[38;5;241m27\u001b[39m]\n\u001b[1;32m----> 2\u001b[0m \u001b[43m_\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mresponse\u001b[49m\u001b[43m(\u001b[49m\u001b[43m)\u001b[49m\n",
-      "Cell \u001b[1;32mIn[25], line 136\u001b[0m, in \u001b[0;36mG9Driver.response\u001b[1;34m(self)\u001b[0m\n\u001b[0;32m    134\u001b[0m \u001b[38;5;28;01mif\u001b[39;00m \u001b[38;5;129;01mnot\u001b[39;00m \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39mcheckFlags13(SITSF):\n\u001b[0;32m    135\u001b[0m     \u001b[38;5;28;01mif\u001b[39;00m \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39msafetyInTerminalError(data[\u001b[38;5;241m31\u001b[39m:\u001b[38;5;241m55\u001b[39m]):\n\u001b[1;32m--> 136\u001b[0m         \u001b[38;5;28;01mraise\u001b[39;00m \u001b[38;5;167;01mValueError\u001b[39;00m(\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mError was detected but was not found\u001b[39m\u001b[38;5;124m\"\u001b[39m)\n\u001b[0;32m    138\u001b[0m SOTSF \u001b[38;5;241m=\u001b[39m data[\u001b[38;5;241m27\u001b[39m:\u001b[38;5;241m31\u001b[39m]\n\u001b[0;32m    139\u001b[0m \u001b[38;5;28mprint\u001b[39m(\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mSOTSF: \u001b[39m\u001b[38;5;124m\"\u001b[39m, SITSF)\n",
-      "\u001b[1;31mValueError\u001b[0m: Error was detected but was not found"
+      "\u001b[1;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
+      "Cell \u001b[1;32mIn[26], line 1\u001b[0m\n\u001b[1;32m----> 1\u001b[0m \u001b[43m_\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mresponse\u001b[49m\u001b[43m(\u001b[49m\u001b[43m)\u001b[49m\n",
+      "Cell \u001b[1;32mIn[23], line 123\u001b[0m, in \u001b[0;36mG9Driver.response\u001b[1;34m(self)\u001b[0m\n\u001b[0;32m    118\u001b[0m \u001b[38;5;66;03m# if OCTD != self.msgOptData:\u001b[39;00m\n\u001b[0;32m    119\u001b[0m \u001b[38;5;66;03m#     raise ValueError(\"Optional Transmission data doesn't match data sent to the G9SP\")\u001b[39;00m\n\u001b[0;32m    120\u001b[0m \n\u001b[0;32m    121\u001b[0m \u001b[38;5;66;03m# TODO: Need to add SITDF functionality\u001b[39;00m\n\u001b[0;32m    122\u001b[0m SITDF \u001b[38;5;241m=\u001b[39m data[\u001b[38;5;241m11\u001b[39m:\u001b[38;5;241m17\u001b[39m]\n\u001b[1;32m--> 123\u001b[0m \u001b[38;5;28;01mif\u001b[39;00m \u001b[38;5;129;01mnot\u001b[39;00m \u001b[38;5;28;43mself\u001b[39;49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mcheckFlags13\u001b[49m\u001b[43m(\u001b[49m\u001b[43mSITDF\u001b[49m\u001b[43m)\u001b[49m:\n\u001b[0;32m    124\u001b[0m     \u001b[38;5;66;03m#TODO: add a function to check which input\u001b[39;00m\n\u001b[0;32m    125\u001b[0m     \u001b[38;5;66;03m# if self.safetyInTerminalError(data[11:17]):\u001b[39;00m\n\u001b[0;32m    126\u001b[0m     \u001b[38;5;28;01mraise\u001b[39;00m \u001b[38;5;167;01mValueError\u001b[39;00m(\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mAn input is either off or throwing an error\u001b[39m\u001b[38;5;124m\"\u001b[39m)\n\u001b[0;32m    128\u001b[0m \u001b[38;5;66;03m# TODO: Need to add SOTDF functionality\u001b[39;00m\n",
+      "Cell \u001b[1;32mIn[23], line 94\u001b[0m, in \u001b[0;36mG9Driver.checkFlags13\u001b[1;34m(self, byteString, norm)\u001b[0m\n\u001b[0;32m     91\u001b[0m \u001b[38;5;28;01massert\u001b[39;00m \u001b[38;5;28misinstance\u001b[39m(byteString, \u001b[38;5;28mbytes\u001b[39m)\n\u001b[0;32m     92\u001b[0m \u001b[38;5;66;03m# this is for if we only need the last 13 bits (more or less hardcoding this \u001b[39;00m\n\u001b[0;32m     93\u001b[0m \u001b[38;5;66;03m# just including the rest if it might be helpful in the future\u001b[39;00m\n\u001b[1;32m---> 94\u001b[0m \u001b[38;5;28;01mif\u001b[39;00m \u001b[38;5;28mint\u001b[39m(\u001b[38;5;28;43mself\u001b[39;49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mbytesToBinary\u001b[49m\u001b[43m(\u001b[49m\u001b[43mbyteString\u001b[49m\u001b[43m)\u001b[49m[\u001b[38;5;241m-\u001b[39m\u001b[38;5;241m13\u001b[39m:], \u001b[38;5;241m2\u001b[39m) \u001b[38;5;241m>\u001b[39m\u001b[38;5;241m=\u001b[39m (\u001b[38;5;241m13\u001b[39m \u001b[38;5;241m*\u001b[39m norm):\n\u001b[0;32m     95\u001b[0m     \u001b[38;5;66;03m# all flags we care about are 1\u001b[39;00m\n\u001b[0;32m     96\u001b[0m     \u001b[38;5;28;01mreturn\u001b[39;00m \u001b[38;5;28;01mTrue\u001b[39;00m\n\u001b[0;32m     97\u001b[0m \u001b[38;5;28;01melse\u001b[39;00m:\n",
+      "\u001b[1;31mTypeError\u001b[0m: G9Driver.bytesToBinary() takes 1 positional argument but 2 were given"
      ]
     }
    ],
    "source": [
-    "res[21:27]\n",
+    "\n",
     "_.response()\n"
    ]
   },
@@ -475,46 +472,38 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 19,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "False"
+      ]
+     },
+     "execution_count": 19,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "def checkFlags13(byteString, norm = 1):\n",
-    "    assert isinstance(byteString, bytes)\n",
-    "    # this is for if we only need the last 13 bits (more or less hardcoding this \n",
-    "    # just including the rest if it might be helpful in the future\n",
-    "    if norm == 1:\n",
-    "        if sum(bytesToBinary(byteString)[-13:] >= 13):\n",
-    "            # all flags we care about are 1\n",
-    "            return True\n",
-    "        else:\n",
-    "            return False\n",
-    "        \n",
-    "def bytesToBinary(byte_string):\n",
-    "    return ''.join(format(byte, '08b') for byte in byte_string)"
+    "\n",
+    "\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "ename": "TypeError",
-     "evalue": "'str' object cannot be interpreted as an integer",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
-      "Cell \u001b[1;32mIn[43], line 2\u001b[0m\n\u001b[0;32m      1\u001b[0m \u001b[38;5;66;03m# checkFlags13(b'\\xff\\xff\\x0f\\x00\\x00\\x00')\u001b[39;00m\n\u001b[1;32m----> 2\u001b[0m \u001b[38;5;28;43mbin\u001b[39;49m\u001b[43m(\u001b[49m\u001b[43mbytesToBinary\u001b[49m\u001b[43m(\u001b[49m\u001b[38;5;124;43mb\u001b[39;49m\u001b[38;5;124;43m'\u001b[39;49m\u001b[38;5;130;43;01m\\xff\u001b[39;49;00m\u001b[38;5;130;43;01m\\xff\u001b[39;49;00m\u001b[38;5;130;43;01m\\x0f\u001b[39;49;00m\u001b[38;5;130;43;01m\\x00\u001b[39;49;00m\u001b[38;5;130;43;01m\\x00\u001b[39;49;00m\u001b[38;5;130;43;01m\\x00\u001b[39;49;00m\u001b[38;5;124;43m'\u001b[39;49m\u001b[43m)\u001b[49m\u001b[43m[\u001b[49m\u001b[38;5;241;43m-\u001b[39;49m\u001b[38;5;241;43m13\u001b[39;49m\u001b[43m:\u001b[49m\u001b[43m]\u001b[49m\u001b[43m)\u001b[49m\n",
-      "\u001b[1;31mTypeError\u001b[0m: 'str' object cannot be interpreted as an integer"
-     ]
-    }
-   ],
-   "source": [
-    "# checkFlags13(b'\\xff\\xff\\x0f\\x00\\x00\\x00')\n",
-    "bin(bytesToBinary(b'\\xff\\xff\\x0f\\x00\\x00\\x00')[-13:])\n"
-   ]
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
