working to see if the driver file works

--- a/scripts/G9Drivertest/testMethods.ipynb
+++ b/scripts/G9Drivertest/testMethods.ipynb
@@ -56,8 +56,9 @@
     "\n",
     "class G9Driver:\n",
     "    #TODO: Return to this and check if these parms are good by default\n",
-    "    def __init__(self, port=\"COM11\", baudrate=9600, timeout=0.5, logger=None, debug_mode=False):\n",
-    "        self.ser = serial.Serial(port, baudrate, parity=serial.PARITY_EVEN, stopbits=serial.STOPBITS_ONE, bytesize=serial.EIGHTBITS, timeout=timeout)\n",
+    "    def __init__(self, port=None, baudrate=9600, timeout=0.5, logger=None, debug_mode=False):\n",
+    "        if port:\n",
+    "            self.ser = serial.Serial(port, baudrate, parity=serial.PARITY_EVEN, stopbits=serial.STOPBITS_ONE, bytesize=serial.EIGHTBITS, timeout=timeout)\n",
     "        self.debug_mode = debug_mode\n",
     "        self.logger = logger\n",
     "        self.lastResponse = None\n",
@@ -66,7 +67,7 @@
     "\n",
     "    #TODO: send query for data\n",
     "    #TODO: decided if we want to store command args in here (like with a dict) or if we should do it in the callee file\n",
-    "    def sendCommand(self):\n",
+    "    def send_command(self):\n",
     "        # TODO: frontend topic : decided how we want to display the exception\n",
     "        if not self.is_connected():\n",
     "            raise ConnectionError(\"Seiral Port is Not Open.\")\n",
@@ -89,16 +90,16 @@
     "\n",
     "    # helper function to convert bytes to bits for checking flags\n",
     "    # not currently being used but many be helpful in the future for getting errors\n",
-    "    def bytesToBinary(self, byte_string):\n",
+    "    def bytes_to_binary(self, byte_string):\n",
     "        return ''.join(format(byte, '08b') for byte in byte_string)\n",
     "    \n",
     "    # this method is made to check the error flags, right not only checks the last 13 bits\n",
     "    # of a byte string\n",
-    "    def checkFlags13(self, byteString, norm = 1):\n",
+    "    def check_flags13(self, byteString, norm = 1):\n",
     "        assert isinstance(byteString, bytes)\n",
     "        # this is for if we only need the last 13 bits (more or less hardcoding this \n",
     "        # just including the rest if it might be helpful in the future\n",
-    "        if int(self.bytesToBinary(byteString)[-13:], 2) >= (13 * norm):\n",
+    "        if int(self.bytes_to_binary(byteString)[-13:], 2) >= (13 * norm):\n",
     "            # all flags we care about are 1\n",
     "            return True\n",
     "        else:\n",
@@ -126,25 +127,25 @@
     "\n",
     "\n",
     "            SITDF = data[11:17]\n",
-    "            if not self.checkFlags13(SITDF):\n",
+    "            if not self.check_flags13(SITDF):\n",
     "                #TODO: add a function to check which input\n",
     "                raise ValueError(\"An input is either off or throwing an error\")\n",
     "\n",
     "\n",
     "            SOTDF = data[17:21]\n",
-    "            if not self.checkFlags13(SOTDF):\n",
+    "            if not self.check_flags13(SOTDF):\n",
     "                #TODO: add a function to check which output\n",
     "                raise ValueError(\"An output is either off or throwing an error\")\n",
     "\n",
     "\n",
     "            SITSF = data[21:27]\n",
-    "            if not self.checkFlags13(SITSF):\n",
-    "                if self.safetyInTerminalError(data[31:55]):\n",
+    "            if not self.check_flags13(SITSF):\n",
+    "                if self.safety_in_terminal_error(data[31:55]):\n",
     "                    raise ValueError(\"Error was detected in inputs but was not found\")\n",
     "                \n",
     "            SOTSF = data[27:31]\n",
-    "            if not self.checkFlags13(SOTSF):\n",
-    "                if self.safetyOutTerminalError(data[55:71]):\n",
+    "            if not self.check_flags13(SOTSF):\n",
+    "                if self.safety_out_terminal_error(data[55:71]):\n",
     "                    raise ValueError(\"Error was detected in outputs but was not found\")\n",
     "                \n",
     "\n",
@@ -152,7 +153,7 @@
     "            US = data[73:75]\n",
     "            print(\"US: \", US)\n",
     "            if US != 0:\n",
-    "                if self.unitStateError(US):\n",
+    "                if self.unit_state_error(US):\n",
     "                    raise ValueError(\"Error was detected in Unit State but was not identified. Could be more than one\")\n",
     "                \n",
     "            \n",
@@ -178,7 +179,7 @@
     "    \"\"\"\n",
     "\n",
     "    # checks all the SITSFs, throws error is one is found\n",
-    "    def safetyInTerminalError(self, data):\n",
+    "    def safety_in_terminal_error(self, data):\n",
     "        if len(data) != 24:\n",
     "            raise ValueError(f\"Expected 24 bytes, but received {len(data)}.\")\n",
     "\n",
@@ -211,7 +212,7 @@
     "    \"\"\"\n",
     "\n",
     "    # checks all the SOTSFs, throws error is one is found \n",
-    "    def safetyOutTerminalError(self, data, inputs = 13):\n",
+    "    def safety_out_terminal_error(self, data, inputs = 13):\n",
     "        if len(data) != 16:\n",
     "            raise ValueError(f\"Expected 16 bytes, but received {len(data)}.\")\n",
     "\n",
@@ -241,11 +242,11 @@
     "    \"\"\"\n",
     "    \n",
     "    # rn am hoping that only one of the error flags can be set at a time\n",
-    "    def unitStateError(self, data):\n",
+    "    def unit_state_error(self, data):\n",
     "        if len(data) != 2:\n",
     "            raise ValueError(f\"Expected 2 bytes, but received {len(data)}.\")\n",
     "        \n",
-    "        bits = self.bytesToBinary(data)\n",
+    "        bits = self.bytes_to_binary(data)\n",
     "\n",
     "        if bits[-1] == \"0\":\n",
     "            raise ValueError(f\"Unit State Error: Normal Operation Error Flag (bit 0)\")\n",
@@ -473,11 +474,11 @@
     "\n",
     "\n",
     "# rn am hoping that only one of the error flags can be set at a time\n",
-    "def unitStateError(data):\n",
+    "def unit_state_error(data):\n",
     "    if len(data) != 2:\n",
     "        raise ValueError(f\"Expected 2 bytes, but received {len(data)}.\")\n",
     "    \n",
-    "    bits = bytesToBinary(data)\n",
+    "    bits = bytes_to_binary(data)\n",
     "    print(bits, \"      \", bits[-1])\n",
     "\n",
     "    if bits[-1] == \"0\":\n",
@@ -496,7 +497,7 @@
     "\n",
     "# helper function to convert bytes to bits for checking flags\n",
     "# not currently being used but many be helpful in the future for getting errors\n",
-    "def bytesToBinary(byte_string):\n",
+    "def bytes_to_binary(byte_string):\n",
     "    return ''.join(format(byte, '08b') for byte in byte_string)\n",
     "\n",
     "\n"
@@ -519,7 +520,7 @@
     }
    ],
    "source": [
-    "bytesToBinary(b'\\x00\\x01')[-1]"
+    "bytes_to_binary(b'\\x00\\x01')[-1]"
    ]
   },
   {
@@ -537,7 +538,7 @@
    ],
    "source": [
     "okstat = b'\\x00\\x01'\n",
-    "unitStateError(okstat)\n"
+    "unit_state_error(okstat)\n"
    ]
   },
   {
@@ -557,7 +558,7 @@
    "source": [
     "notstat = b'\\x00\\x00'\n",
     "try:\n",
-    "    unitStateError(notstat)\n",
+    "    unit_state_error(notstat)\n",
     "except ValueError as e:\n",
     "    print(e)"
    ]
@@ -579,7 +580,7 @@
    "source": [
     "notstat2 = b'\\x02\\x01'\n",
     "try:\n",
-    "    unitStateError(notstat2)\n",
+    "    unit_state_error(notstat2)\n",
     "except ValueError as e:\n",
     "    print(e)"
    ]
@@ -601,7 +602,7 @@
    "source": [
     "notstat2 = b'\\x04\\x01'\n",
     "try:\n",
-    "    unitStateError(notstat2)\n",
+    "    unit_state_error(notstat2)\n",
     "except ValueError as e:\n",
     "    print(e)"
    ]
@@ -623,7 +624,7 @@
    "source": [
     "notstat2 = b'\\x20\\x01'\n",
     "try:\n",
-    "    unitStateError(notstat2)\n",
+    "    unit_state_error(notstat2)\n",
     "except ValueError as e:\n",
     "    print(e)"
    ]
