was working on adding the changes to the driver and also working with some of the flag sections and error sections to exclude the reserver data being processed

--- a/scripts/G9Drivertest/testMethods.ipynb
+++ b/scripts/G9Drivertest/testMethods.ipynb
@@ -655,7 +655,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 71,
+   "execution_count": 74,
    "metadata": {},
    "outputs": [
     {
@@ -664,7 +664,7 @@
        "True"
       ]
      },
-     "execution_count": 71,
+     "execution_count": 74,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -676,7 +676,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 72,
+   "execution_count": 75,
    "metadata": {},
    "outputs": [
     {
@@ -685,13 +685,122 @@
        "b'\\x12\\x00'"
       ]
      },
-     "execution_count": 72,
+     "execution_count": 75,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "US"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 82,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "True"
+      ]
+     },
+     "execution_count": 82,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "b'\\x00\\x01' == b'\\x00\\x01'"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 91,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "lengthTest = b'@\\x00\\x00\\xc3\\x00\\x00\\xcb\\x00\\x00\\x00\\x00\\x00\\x08\\x00\\x00\\x00\\x00C\\x00\\x00\\x00\\xff\\xff\\x0f\\x00\\x00\\x00\\xff\\x00\\x00\\x00\\x00\\x00\\x00\\x00\\x00\\x00\\x00\\x00\\x00\\x00\\x00\\x00\\x00\\x00\\x00\\x00\\x00\\x00\\x00\\x00\\x00\\x00\\x00\\x00\\x00\\x00\\x00\\x00\\x00\\x00\\x00\\x00\\x00\\x00\\x00\\x00\\x00\\x00\\x00\\x00\\x08\\x00\\x13\\x00\\x9a\\x08\\xbe\\x14\\x00\\x0020000012X17M\\x00\\x00\\x00\\x00\\x00\\x00\\x00\\x00\\x00\\x00\\x00\\x00\\x00\\x00\\x00\\x00\\x00\\x00\\x00\\x00\\n\\n?\\x00\\x14\\xb8?\\x00\\x14\\xb8?\\x00\\x14\\xb8?\\x00\\x14\\xb8?\\x00\\x14\\xb2?\\x00\\x14\\xac?\\x00\\x14\\xac?\\x00\\x14\\xac?\\x00\\x14\\xa0?\\x00\\x14\\xa0\\x06\\x00\\x14\\xb2\\x01\\x00\\x14\\xb2\\x01\\x00\\x14\\xb2\\x01\\x00\\x14\\xb2\\x06\\x00\\x14\\xb2\\x01\\x00\\x14\\xb2\\x06\\x00\\x14\\x9a\\x01\\x00\\x14\\x9a\\x01\\x00\\x14\\x9a\\x06\\x00\\x14\\x9a\\x1a\\xe8*\\r'"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 92,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "195"
+      ]
+     },
+     "execution_count": 92,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "lengthTest[3]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 95,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "b'@'"
+      ]
+     },
+     "execution_count": 95,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "b'\\x40'"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 99,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "b'\\x00\\x08\\x00\\x00\\x00\\x00'\n",
+      "b'\\x00\\x00\\x00'\n"
+     ]
+    }
+   ],
+   "source": [
+    "_ = lengthTest[11:17]\n",
+    "print(_)\n",
+    "print(_[-3:])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 102,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "10"
+      ]
+     },
+     "execution_count": 102,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "len(lengthTest[31:55][-10:])"
    ]
   }
  ],
