unit status no longer raises errors, that would lead to full message not being parsed; now only reports to the log; will need to rewrite some of the tests to reflex these changes

--- a/scripts/G9Drivertest/g9_driver_test_qa.ipynb
+++ b/scripts/G9Drivertest/g9_driver_test_qa.ipynb
@@ -112,6 +112,66 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 31,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "199"
+      ]
+     },
+     "execution_count": 31,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "msg = b'@\\x00\\x00\\xc3\\x00\\x00\\xcb\\x00\\x00\\x00\\x00\\xfc\\x0f\\x00\\x00\\x00\\x00E\\x00\\x00\\x00\\xff\\xff\\x0f\\x00\\x00\\x00\\xff\\x00\\x00\\x00\\x00\\x00\\x00\\x00\\x00\\x00\\x00\\x00\\x00\\x00\\x00\\x00\\x00\\x00\\x00\\x00\\x00\\x00\\x00\\x00\\x00\\x00\\x00\\x00\\x00\\x00\\x00\\x00\\x00\\x00\\x00\\x00\\x00\\x00\\x00\\x00\\x00\\x00\\x00\\x00\\x08\\x00\\x12\\x00\\x9a\\x08~\\x15\\x00\\x0020000012X17M\\x00\\x00\\x00\\x00\\x00\\x00\\x00\\x00\\x00\\x00\\x00\\x00\\x00\\x00\\x00@\\x00\\x00\\x00\\x00\\n\\n?\\x00\\x15~?\\x00\\x15l?\\x00\\x15f?\\x00\\x15`?\\x00\\x15`?\\x00\\x15`?\\x00\\x15H?\\x00\\x15H?\\x00\\x15H?\\x00\\x15B\\x06\\x00\\x15f\\x01\\x00\\x15f\\x06\\x00\\x15`\\x01\\x00\\x15`\\x06\\x00\\x15B\\x01\\x00\\x15B\\x06\\x00\\x15B\\x01\\x00\\x15B\\x06\\x00\\x15\\x1e\\x01\\x00\\x15\\x1e\\x14\\xf6*\\r'\n",
+    "len(msg)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 35,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "b'\\x14\\xf6'"
+      ]
+     },
+     "execution_count": 35,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "check = msg[-4:-2]\n",
+    "check"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "b'\\x1e\\x14\\xf6*\\r'"
+      ]
+     },
+     "execution_count": 28,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": []
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
